# Otus_Homework

./: .gitignore  BulkHandler.cpp  BulkHandler.h  CMakeLists.txt  Canvas.cpp  Canvas.h  FileHandler.cpp  FileHandler.h  Observer.h  OutputHandler.cpp  OutputHandler.h  Task1000.cpp  Task1000.h  Task1001.cpp  Task1001.h  Task1197.cpp  Task1197.h  Task1264.cpp  Task1264.h  Task1293.cpp  Task1293.h  Task1409.cpp  Task1409.h  Task1785.cpp  Task1785.h  Task1787.cpp  Task1787.h  Task1820.cpp  Task1820.h  Task1877.cpp  Task1877.h  Task1880.cpp  Task1880.h  Task2001.cpp  Task2001.h  Task2012.cpp  Task2012.h  Task2066.cpp  Task2066.h  Task2100.cpp  (+4 more)
.github/workflows/: release.yml
Shapes/: Circle.cpp  Circle.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Shapes.h
